[fix](ABC-1012): Fix scrollbar visibility

--- a/src/modules/base/kanban/shared.css
+++ b/src/modules/base/kanban/shared.css
@@ -226,29 +226,6 @@
     pointer-events: none;
 }
 
-.avonni-kanban__container::-webkit-scrollbar,
-.avonni-kanban__tiles_container::-webkit-scrollbar {
-    width: 7px;
-    height: 7px;
-}
-
-.avonni-kanban__container::-webkit-scrollbar-track,
-.avonni-kanban__tiles_container::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-.avonni-kanban__container::-webkit-scrollbar-thumb,
-.avonni-kanban__tiles_container::-webkit-scrollbar-thumb {
-    background: #dbdbdb;
-    border-radius: 5px;
-}
-
-.avonni-kanban__container::-webkit-scrollbar-thumb:hover,
-.avonni-kanban__tiles_container::-webkit-scrollbar-thumb:hover,
-.avonni-kanban__tiles_container::-webkit-scrollbar-thumb:hover {
-    background: #c0c0c0;
-}
-
 .avonni-kanban__variant_base
     .avonni-kanban__field.avonni-kanban__dragged_group {
     position: relative;
